cc_binary(
    name = "bin",
    srcs = [
        "backend.c",
        "cconv.c",
        "client.c",
        "dataplacement.c",
        "debug.c",
        "dedupe.c",
        "engines/cpu.c",
        "engines/exec.c",
        "engines/fileoperations.c",
        "engines/ftruncate.c",
        "engines/mmap.c",
        "engines/net.c",
        "engines/null.c",
        "engines/sync.c",
        "eta.c",
        "filehash.c",
        "filelock.c",
        "filesetup.c",
        "fio.c",
        "fio_sem.c",
        "flow.c",
        "gettime.c",
        "gettime-thread.c",
        "helper_thread.c",
        "helpers.c",
        "idletime.c",
        "init.c",
        "io_u.c",
        "io_u_queue.c",
        "ioengines.c",
        "iolog.c",
        "json.c",
        "libfio.c",
        "log.c",
        "memory.c",
        "optgroup.c",
        "options.c",
        "parse.c",
        "profile.c",
        "profiles/act.c",
        "profiles/tiobench.c",
        "pshared.c",
        "rate-submit.c",
        "rwlock.c",
        "server.c",
        "smalloc.c",
        "stat.c",
        "steadystate.c",
        "td_error.c",
        "time.c",
        "verify.c",
        "workqueue.c",
        "zbd.c",
        "zone-dist.c",
    ] + glob([
        "lib/*.c",
        "crc/*.c",
    ]) + glob([
        "**/*.h",
    ]) + [
        "engines/cmdprio.c",
        "engines/libaio.c",
    ] + [
        # makefile if linux
        "diskutil.c",
        "fifo.c",
        "blktrace.c",
        "cgroup.c",
        "trim.c",
        "engines/sg.c",
        "oslib/linux-dev-lookup.c",
        "engines/io_uring.c",
        "engines/nvme.c",
    ],
    copts = [
        "-D_GNU_SOURCE",
        "-DFIO_INTERNAL",
        "-D_LARGEFILE_SOURCE",
        "-D_FILE_OFFSET_BITS=64",
        "-DBITS_PER_LONG=64",
        "-std=gnu99",
        "-O3",
        "-g",
        "-Wall",
        "-Wwrite-strings",
        "-Wdeclaration-after-statement",
        "-ffast-math",
    ] + [
        "-include",
        "config-host.h",
    ],
    linkopts = [
        "-static",
        "-lpthread",
        "-lm",
        "-laio",
        "-lrt",
        "-lz",
        "-ldl",
    ],
    linkstatic = True,
    visibility = [
        "//visibility:public",
    ],
)
