module(
    name = "fio",
    version = "40fa922046ca6eae9a58a31c70f87090d326e080",
)

# https://github.com/bazelbuild/bazel-skylib/releases
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.10")

# https://github.com/bazel-contrib/toolchains_llvm/releases
bazel_dep(name = "toolchains_llvm", version = "1.2.0")
#https://github.com/bazel-contrib/toolchains_llvm/issues/243
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency=True)
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "19.1.0",
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all", dev_dependency=True)